--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "hjj",
-  "license": "ISC",
+  "license": "BSD",
   "devDependencies": {
     "chalk": "^4.1.2",
     "commander": "^9.0.0",
