--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "download-git-repo": "^3.0.2",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "loading-cli": "^1.1.0"
   }
 }
